# rmx

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README_zh-CN.md  build.rs  create_nul.rs  group-recommendation.md  promotion.md  stderr.txt  test_rmx.ps1
.github/workflows/: release.yml
.opencode/skills/gpui-code-quality/: SKILL.md
.opencode/skills/gpui-fundamentals/: SKILL.md
.opencode/skills/gpui-init/: SKILL.md
.opencode/skills/gpui-patterns/: SKILL.md
.opencode/skills/gpui-styling/: SKILL.md
.opencode/skills/gpui-troubleshooting/: SKILL.md
.opencode/skills/rust-coding-guidelines/: SKILL.md
.sisyphus/: ralph-loop.local.md
bucket/: rmx.json
docs/: performance-research.md
rmx-shell/: Cargo.toml
rmx-shell/src/: com.rs  lib.rs  menu.rs  registry.rs
src/: broker.rs  context_menu.rs  error.rs  lib.rs  main.rs  progress_ui.rs  safety.rs  tree.rs  upgrade.rs  winapi.rs  worker.rs
tests/: concurrency_tests.rs  integration_tests.rs  stress_tests.rs
