[package]
name = "rmx"
version = "0.1.0"
edition = "2021"
authors = ["rmx contributors"]
description = "Fast parallel directory deletion for Windows - blazingly fast removal of node_modules, target, and other large directories"
license = "MIT"
keywords = ["filesystem", "delete", "parallel", "performance", "windows"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
dashmap = "6"
parking_lot = "0.12"
rayon = "1.10"
anyhow = "1.0"
mimalloc = { version = "0.1", default-features = false }

# GUI dependencies (Windows only)
[target.'cfg(windows)'.dependencies.gpui]
git = "https://github.com/zed-industries/zed"

[target.'cfg(windows)'.dependencies.gpui-component]
git = "https://github.com/longbridge/gpui-component"
package = "gpui-component"

[target.'cfg(windows)'.dependencies.gpui-component-assets]
git = "https://github.com/longbridge/gpui-component"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_System_RestartManager",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Wdk_Storage_FileSystem",
    "Wdk_System_SystemInformation",
] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = false
